crates/toml/tests/snapshots/invalid/array/tables-01.stderr
TOML parse error at line 4, column 3
  |
4 | [[fruit]] # Not allowed
  |   ^^^^^
duplicate key
